tutorials/crossplane/xrds/poc-manifests/prerequisite-infrastructure.yaml
# Complete Prerequisite Infrastructure for XRD Tutorial
# This provides all foundational AWS infrastructure needed for the tutorial
# Learners will build ApiEndpoint and ApiRoute XRDs on top of this foundation

# Provider installations - these must be applied first
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: xrd-tutorial-route-public
  labels:
    tutorial.crossplane.io/component: infrastructure
    tutorial.crossplane.io/layer: prerequisite
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdSelector:
      matchLabels:
        tutorial.crossplane.io/component: infrastructure
        tutorial.crossplane.io/layer: prerequisite
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        tutorial.crossplane.io/component: infrastructure
        tutorial.crossplane.io/layer: prerequisite
  providerConfigRef:
    name: default
