tutorials/crossplane/xrds/poc-manifests/vpc-infrastructure.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: xrd-tutorial-route-public
  labels:
    tutorial.crossplane.io/component: infrastructure
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdSelector:
      matchLabels:
        tutorial.crossplane.io/component: infrastructure
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        tutorial.crossplane.io/component: infrastructure
  providerConfigRef:
    name: default
